[BACKEND-41] добавлена таблица fishing.techniques_account_users
